--- a/auto_response/response.kv
+++ b/auto_response/response.kv
@@ -5,7 +5,7 @@ ScreenManager:
             padding: [self.width * 0.1, 0, self.width * 0.1, 20]
             spacing: 50
             orientation: 'vertical'
-            Label:
+            Message:
                 text: 'Respostas Rareneger'
                 font_size: (16 + (8/1920) * self.width)
             Button:
@@ -27,7 +27,7 @@ ScreenManager:
             padding: [self.width * 0.1, 0, self.width * 0.1, 20]
             spacing: 50
             orientation: 'vertical'
-            Label:
+            Message:
                 text: ''
                 font_size: (16 + (8/1920) * self.width)
             Button:
