handling wrong id error

--- a/auto_response/response.kv
+++ b/auto_response/response.kv
@@ -26,6 +26,8 @@ ScreenManager:
                     TextInput:
                         id: id_input
                         text:
+                    Label:
+                        id: id_error_message
     Screen:
         name: 'respostas'
         BoxLayout:
